--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
   -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <script src="https://threejs.org/build/three.js"></script>
+  <script src="https://threejs.org/examples/js/libs/tween.min.js"></script>
+  <script src="https://threejs.org/examples/js/controls/TrackballControls.js"></script>
+  <script src="https://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script>
     // Initialize Firebase
